KYLIN-4660 Cleanup